<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F3F8F9"
        android:outlineProvider="paddedBounds"
        tools:context=".view.fragments.SignInFragment">


        <TextView
            android:id="@+id/tvSignInLetsSignin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/dm_sans"
            android:text="@string/let_s_sign_you_in"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSignInWelcomeBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/welcome_back_you_ve_been_missed"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignInLetsSignin" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutSigninEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignInWelcomeBack">


            <TextView
                android:id="@+id/tvSignInEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/email"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmail"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:startIconDrawable="@drawable/person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSignInEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/transparent"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />


            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutSigninPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutSigninEmail">

            <TextView
                android:id="@+id/tvSignInPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/password"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/textInputLayoutPassword"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSignInPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/transparent"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutSignInSignInOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutSigninPassword">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/custom_button_intro2"
                android:drawableEnd="@drawable/log_in"
                android:elevation="5dp"
                android:paddingHorizontal="16dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/white"
                android:elevation="10dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/btnSignIn"
                app:layout_constraintStart_toStartOf="@id/btnSignIn"
                app:layout_constraintTop_toTopOf="@id/btnSignIn" />


            <TextView
                android:id="@+id/tvSignInDoyouHvAccnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="60dp"
                android:fontFamily="@font/dm_sans"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/btnSignIn"
                app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

            <TextView
                android:id="@+id/tvSiginClickHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans"
                android:paddingHorizontal="5dp"
                android:paddingVertical="8dp"
                android:text="@string/click_here"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tvSignInDoyouHvAccnt"
                app:layout_constraintStart_toEndOf="@id/tvSignInDoyouHvAccnt"
                app:layout_constraintTop_toTopOf="@id/tvSignInDoyouHvAccnt" />


            <androidx.constraintlayout.utils.widget.MotionButton
                android:id="@+id/btnGoogleSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:background="@drawable/custom_button_google"
                android:drawableStart="@drawable/google"
                android:elevation="5dp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@id/btnContinueWithout"
                app:layout_constraintEnd_toEndOf="@id/btnSignIn"
                app:layout_constraintStart_toStartOf="@id/btnSignIn"
                app:layout_constraintTop_toBottomOf="@id/tvSignInDoyouHvAccnt" />

            <androidx.constraintlayout.utils.widget.MotionButton
                android:id="@+id/btnContinueWithout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/custom_button_google"
                android:text="@string/continue_without"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/btnSignIn"
                app:layout_constraintStart_toStartOf="@id/btnSignIn"
                app:layout_constraintTop_toBottomOf="@id/btnGoogleSignIn" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>