<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F3F8F9"
        tools:context=".view.fragments.SignInFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutSignUpLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tvSignUpTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/dm_sans"
                android:text="@string/getting_started"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSignUpDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/create_an_account_to_continue"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSignUpTitle" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutSignUpEntries"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutSignUpLocation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutSignUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@id/textInputLayoutEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:startIconDrawable="@drawable/person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSignUpEmail"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/transparent"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutSignUpUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutSignUpEmail">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@id/textInputLayoutPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="NotSibling" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSignUpPassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/transparent"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutSignUpUsername">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@id/textInputLayoutConfirmPassword"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSignUpCPassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/transparent"
                        android:inputType="textPassword"
                        android:maxLines="1" />


                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <CheckBox
                android:id="@+id/cbSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutSignUpPassword" />

            <TextView
                android:id="@+id/tvSignUpTermsCond1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans"
                android:text="@string/by_creating_an_account_you_agree_to_our"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/cbSignUp"
                app:layout_constraintStart_toEndOf="@id/cbSignUp"
                app:layout_constraintTop_toTopOf="@id/cbSignUp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingVertical="4dp"
                android:text="@string/term_amp_conditions"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tvSignUpTermsCond1"
                app:layout_constraintStart_toStartOf="@id/tvSignUpTermsCond1"
                app:layout_constraintTop_toBottomOf="@id/tvSignUpTermsCond1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutSignUpButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutSignUpEntries">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUpSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_button_intro2"
                android:drawableEnd="@drawable/log_in"
                android:elevation="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/layoutSignUpButtons">


            </androidx.appcompat.widget.AppCompatButton>

            <TextView
                android:id="@+id/tvSignUpDoYouHvAccnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/dm_sans"
                android:maxLines="1"
                android:text="@string/already_have_an_account"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSignUpSignUp" />

            <TextView
                android:id="@+id/tvSignUptoSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans"
                android:paddingStart="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tvSignUpDoYouHvAccnt"
                app:layout_constraintStart_toEndOf="@id/tvSignUpDoYouHvAccnt"
                app:layout_constraintTop_toTopOf="@id/tvSignUpDoYouHvAccnt" />

            <androidx.constraintlayout.utils.widget.MotionButton
                android:id="@+id/btnSignUpWithGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_button_google"
                android:drawableStart="@drawable/google"
                android:elevation="5dp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSignUpDoYouHvAccnt" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>